# shift5

./: .gitignore  Cargo.toml  README.md
generator/: Cargo.toml
generator/src/: lib.rs  main.rs
parser/: Cargo.toml
parser/benches/: state_machine.rs
parser/src/: lib.rs  state_machine.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
